# AUV_PROJ

./: .gitignore  CMakeLists.txt  README.md
MdReader/.obsidian/: workspace.json
MdReader/文献调研/: AUV_single_vehicle_control_visualization_plan_revised.md  AUV单体控制算法仿真可视化方案.md  AUV单体控制算法仿真项目方案_修改版.md  AUV单体控制算法可操作可视化APP执行方案.md  AUV单体控制算法核心文献精读表.md  Fossen海洋航行器动力学建模笔记.md  第一版实施步骤细化方案.md
apps/auv_sim/: main.cpp
include/auv/actuator/: saturation.h
include/auv/controller/: path_following_controller.h  pid_controller.h  speed_controller.h
include/auv/environment/: current_model.h
include/auv/guidance/: los_guidance.h  reference_path.h
include/auv/math/: angle_utils.h  rotation_2d.h
include/auv/model/: auv_3dof_model.h  auv_3dof_params.h  heading_model.h
include/auv/simulator/: logger_csv.h  rk4_integrator.h
results/visualization/: circle_path_report.html  index.html  s_curve_path_report.html  straight_path_report.html
scripts/: batch_generate_reports.py  convert_simulation_csv_to_json.py  generate_visualization_index.py  plot_simulation_results.py
src/actuator/: saturation.cpp
src/controller/: path_following_controller.cpp  pid_controller.cpp  speed_controller.cpp
src/environment/: current_model.cpp
src/guidance/: los_guidance.cpp  reference_path.cpp
src/math/: angle_utils.cpp  rotation_2d.cpp
src/model/: auv_3dof_model.cpp  auv_3dof_params.cpp  heading_model.cpp
src/simulator/: logger_csv.cpp
tests/: test_actuator_saturation.cpp  test_angle_utils.cpp  test_auv_3dof_model.cpp  test_auv_3dof_params.cpp  test_csv_logger.cpp  test_current_model.cpp  test_curved_path_following.cpp  test_heading_pid.cpp  test_los_guidance.cpp  test_path_following.cpp  test_pid_controller.cpp  test_reference_paths.cpp  test_rk4_integrator.cpp  test_rotation_2d.cpp  test_speed_controller.cpp
web/: electron-main.cjs  index.html  package-lock.json  package.json
web/public/data/: circle.json  s_curve.json  straight.json
web/src/: App.jsx  styles.css
